Made selection background more readable. And pink. Fixes #9 (without fucking up). Let's pretend those other commits didn't happen, because they totally didn't (even though they're listed under the issue).

--- a/theme/mindcrack/assets/stylesheets/style.scss
+++ b/theme/mindcrack/assets/stylesheets/style.scss
@@ -13,7 +13,7 @@ h1.main {
 }
 
 *::selection {
-	background-color: $mc-blue;
+	background-color: HotPink;
 	color: white;
 }
 
